--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </head>
   <body class="select-none overflow-hidden">
     <div id="root" class="w-screen h-screen"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
