--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Fira+Mono:wght@400;500;700&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Fira+Mono"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Fira+Code"
-    />
-    <title>eDex-UI</title>
-  </head>
+    <title>eDex-UI</title></head
+  >f
   <body class="select-none overflow-hidden">
     <div id="root" class="w-screen h-screen"></div>
     <script type="module" src="./src/main.tsx"></script>
