migrate to tailwind v4

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     />
     <title>eDex-UI</title></head
   >f
-  <body class="select-none overflow-hidden">
-    <div id="root" class="w-screen h-screen"></div>
+  <body class="overflow-hidden select-none">
+    <div id="root" class="h-screen w-screen"></div>
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
