remove the bad character in main html.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html lang="en" class="scroll-smooth">
+<html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta
-      name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+      name="viewport"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Fira+Mono:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>eDex-UI</title></head
-  >f
+    <title>eDex-UI</title>
+  </head>
   <body class="overflow-hidden select-none">
-    <div id="root" class="h-screen w-screen"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <div class="h-screen w-screen" id="root"></div>
+    <script src="./src/main.tsx" type="module"></script>
   </body>
 </html>
